# rimecmd

./: .clangd  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  VHS_GIF.md  build.rs  meson.build  vhs.tape
.cargo/: config.toml
githooks/: pre-commit
src/: client.rs  error.rs  event_processor.rs  json_mode.rs  json_request_processor.rs  json_source.rs  json_stdin.rs  key_processor.rs  main.rs  poll_data.rs  poll_request.rs  request_handler.rs  server_mode.rs  stdin_interface.rs  terminal_interface.rs  terminal_json_mode.rs  terminal_mode.rs  test_rime_api.rs  testing_utilities.rs
src/rime_api/: key_mappings.rs  mod.rs  rime_api.c
src/terminal_interface/: input_parser.rs  input_translator.rs  mod.rs  test_input_translator.rs
src/terminal_interface/tests/: input_translator.rs  mod.rs
src/tests/: key_processor.rs  mod.rs  rime_api.rs
test_shared_data/: README.md
vhs/: 将进酒.txt
