[package]
name = "rimecmd"
version = "0.1.0"
edition = "2021"
description = "Use Rime via the command line."

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
libc = "0.2.150"
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["rt", "io-util", "io-std", "macros", "fs"] }
xdg = "2.5.2"

[dev-dependencies]
rand = "0.8.5"
