[package]
name = "rimecmd"
version = "0.1.0"
edition = "2021"
description = """
Interact with the Rime input method through commands."""

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
libc = "0.2.150"
mio = { version = "0.8.10", features = ["os-poll", "os-ext"] }
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
signal-hook = { version = "0.3.17", features = ["iterator"] }
uuid = { version = "1.6.1", features = ["v4"] }
xdg = "2.5.2"

[dev-dependencies]
rand = "0.8.5"
