[package]
name = "rimecmd"
version = "0.1.1"
edition = "2021"
description = "Interact with the Rime input method engine through commands."

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
libc = "0.2.150"
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
signal-hook = { version = "0.3.17", features = ["iterator"] }
uuid = { version = "1.6.1", features = ["v4"] }
xdg = "2.5.2"

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
cc = "1.1.13"
